--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -11,7 +11,7 @@
 </head>
 
 <body>
-    <header >
+    <header>
         <div class="logo">
             My Portfolio
         </div>
@@ -180,10 +180,10 @@
     <p class="footer-text">Frontend & Web Developer</p>
 
     <div class="social-icons">
-      <a href="https://linkedin.com" target="_blank" aria-label="LinkedIn">
+      <a href="https://www.linkedin.com/in/dhiraj-v-rathwa-455b44263?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app" target="_blank" aria-label="LinkedIn">
         <i class="fab fa-linkedin"></i>
       </a>
-      <a href="https://github.com" target="_blank" aria-label="GitHub">
+      <a href="https://github.com/Dhirajrathwa" target="_blank" aria-label="GitHub">
         <i class="fab fa-github"></i>
       </a>
       <a href="https://instagram.com" target="_blank" aria-label="Instagram">
@@ -198,7 +198,7 @@
 
   </div>
 </footer>
-
+<!-- javascript link -->
     <script src="script.js"></script>
 
 </body>
